<resources>
    <string name="app_name">Registration Form</string>
    
    <!-- Language Switching -->
    <string name="language_toggle">Language</string>
    <string name="language_en">EN</string>
    <string name="language_am">AM</string>
    
    <!-- Registration Activity -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_photo">Select Photo</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="first_name_required">First name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="date_required">Date of birth is required</string>
    <string name="password_required">Password is required</string>
    <string name="confirm_password_required">Confirm password is required</string>
    <string name="photo_required">Photo is required</string>
    <string name="passwords_do_not_match">Passwords do not match</string>

</resources>